--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -7,12 +7,14 @@ errors.date={0} must be a date in the format of MM/dd/yy.
 errors.float={0} must be a float number.
 
 error.createNanoparticle=Error in creating the nanoparticle metadata: {0}
-message.createNanoparticle.secure=Selected particles have been successfully assigned to be visible for group(s): {0}
-error.nanoparticle.generalInfo=Error in getting the nanoparticle general info: {0}.
+message.createNanoparticle.secure=Selected particles have been successfully assigned to be visible for group(s): {0}.
+error.nanoparticle.generalInfo=Error in getting the nanoparticle general info: {0}
 
 error.submitReport=Error in submiting the report: {0}
 message.submitReport.secure=Uploaded report has been sucessfully assigned to be visibile for groups: {0}
 message.submitReport.file=The report {0} has been succesfully uploaded.
+message.updateReport=You have successfully updated the report meta data for report: {0}.
+error.updateReport=Error in updating the report: {0}
 
 message.addParticleComposition=You've successfully added the physical composition data.
 error.addParticleComposition=Error in saving physical composition data: {0}
