--- a/src/gov/nih/nci/calab/resources/submit.properties
+++ b/src/gov/nih/nci/calab/resources/submit.properties
@@ -36,32 +36,35 @@ numberOfConditions=Number of Conditions
 otherInstrumentType=Other Instrument Type
 otherManufacturer=Other Manufacturer
 
+type=Type
+
+otherType=Other Type
+
 nanoparticleCompositionForm.carbonNanotube.growthDiameter=Growth Diameter
 nanoparticleCompositionForm.carbonNanotube.averageLength=Average Length
 
 nanoparticleCompositionForm.dendrimer.generation=Generation
+nanoparticleCompositionForm.dendrimer.surfaceGroupOtherName=Other Surface Group Name
 
 nanoparticleCompositionForm.emulsion.polymerName=Polymer Name
 
 nanoparticleCompositionForm.liposome.polymerName=Polymer Name 
 
+nanoparticleCompositionForm.polymer.otherInitiator= Other Initiator
+
 nanoparticleCompositionForm.fullerene.numberOfCarbon=Number of Carbon
 
 nanoparticleCompositionForm.polymer.crosslinkDegree=Crosslink Degree
 
-nanoparticleCompositionForm.otherBranch = Other Branch
+nanoparticleCompositionForm.dendrimer.otherBranch = Other Branch
 
-nanoparticleCompositionForm.otherGeneration = Other Generation
+nanoparticleCompositionForm.dendrimer.otherGeneration = Other Generation
 
 loadDerivedBioAssayDataForm.title=Assay Result File Title
 loadDerivedBioAssayDataForm.file=Assay Result File
 error.loadDerivedBioAssayData=Error in loading characterization file: {0}
 error.updateDerivedBioAssayData=Error in updating meta data for characterization file: {0}
 message.updateDerivedBioAssayData=You've successfully updated meta data for characterization file: {0}.
-
-nanoparticleMorphologyForm.type=Type
-
-nanoparticleShapeForm.type=Type
 
 nanoparticleSurfaceForm.numberOfSurfaceChemistries=Number of Surface Chemistries
 nanoparticleSurfaceForm.numberOfMolecules=Number of Molecules
@@ -73,7 +76,9 @@ nanoparticleSurfaceForm.zetaPotentialValue=Zeta Potential value
 nanoparticleSurfaceForm.surfaceAreaValue=Surface Area value
 
 nanoparticleShapeForm.minDimension=Minimum Dimension value
-nanoparticleShapeForm.maxDimension=Maximum Dimension value 
+nanoparticleShapeForm.maxDimension=Maximum Dimension value
+
+invitroCytotoxicityCellViabilityForm.otherCellLine=Other Cell Line 
 
 message.addParticleSize=You've successfully added the size characterization data.
 error.addParticleSize=Error in saving size characterization data: {0}
