--- a/src/gov/nih/nci/cananolab/resources/document.properties
+++ b/src/gov/nih/nci/cananolab/resources/document.properties
@@ -6,7 +6,7 @@ errors.range={0} must be an integer number between {1} and {2}.
 errors.date={0} must be a date in the format of MM/dd/yyyy.
 errors.float={0} must be a float number.
 
-message.deleteDocuments=You've successfully deleted the {0} data.
+message.deleteDocuments=You've successfully deleted the {0} document.
 message.submitPublication.file=The document {0} has been successfully submitted.
 submitPublicationForm.particleID=Particle ID
 submitPublicationForm.particleNames=Nanoparticle Sample Name
