--- a/src/gov/nih/nci/cananolab/resources/particle.properties
+++ b/src/gov/nih/nci/cananolab/resources/particle.properties
@@ -17,6 +17,7 @@ nanoparticleSampleForm.sampleSource=Nanoparticle Sample Source
 nanoparticleSampleForm.sampleName=Nanoparticle Sample Name 
 error.duplicateNanoparticleSample=The nanoparticle sample name is already in use.  Please type in a different one 
 
+message.deleteDocuments=You've successfully deleted the {0} document.
 message.addParticleComposition=You've successfully added composition data.
 message.addNanoparticleEntity=You've successfully added nanoparticle entity data.
 message.deleteNanoparticleEntity=You've successfully deleted the nanoparticle entity.
