--- a/src/gov/nih/nci/cananolab/resources/document.properties
+++ b/src/gov/nih/nci/cananolab/resources/document.properties
@@ -9,6 +9,7 @@ errors.float={0} must be a float number.
 message.deleteDocuments=You've successfully deleted the {0} document.
 message.submitPublication.file=The document {0} has been successfully submitted.
 message.submitPublication.pubmedArticleNotFound=PubMed article not found for the PubMed ID: {0}
+message.submitPublication.pubmedIdRequired=PubMed ID is required to auto populate PubMed article fields.
 submitPublicationForm.particleID=Particle ID
 submitPublicationForm.particleNames=Nanoparticle Sample Name
 submitPublicationForm.file.category=Publication Type
