--- a/src/gov/nih/nci/cananolab/resources/report.properties
+++ b/src/gov/nih/nci/cananolab/resources/report.properties
@@ -7,7 +7,7 @@ errors.date={0} must be a date in the format of MM/dd/yyyy.
 errors.float={0} must be a float number.
 
 message.deleteDocuments=You've successfully deleted the {0} document.
-message.submitReport.file=The report {0} has been successfully submitted.
+message.submitReport.file=The report, titled as, {0}, has been successfully submitted.
 submitReportForm.particleID=Particle ID
 submitReportForm.reportType=Report Type
 submitReportForm.reportFile=Uploading a file
