--- a/src/gov/nih/nci/cananolab/resources/application.properties
+++ b/src/gov/nih/nci/cananolab/resources/application.properties
@@ -37,6 +37,6 @@ error.grid.document.query=Error in querying remote documents.
 error.grid.particle.query=Error in querying remote particles.
 error.grid.protocol.query=Error in querying remote protocols.
 error.nanoparticleCount=Can not get public nanoparticle count from {0}.
-error.reportCount=Can not get public report count from {0}.
+error.documentCount=Can not get public document count from {0}.
 error.protocolCount=Can not get public protocol count from {0}.
 message.grid.discovery.none=No grid nodes were found for model {0}.
