--- a/gov/nih/nci/cananolab/resources/document.properties
+++ b/gov/nih/nci/cananolab/resources/document.properties
@@ -10,6 +10,7 @@ message.deleteDocuments=You've successfully deleted the {0} document.
 message.submitPublication.file=The document, titled as, {0}, has been successfully submitted.
 message.submitPublication.pubmedArticleNotFound=PubMed article not found for the PubMed ID: {0}
 message.submitPublication.pubmedIdRequired=PubMed ID is required to auto populate PubMed article fields.
+message.submitPublication.invalidPubmedId=Invalid PubMed ID. Please enter numeric value for PubMed ID.
 submitPublicationForm.particleID=Particle ID
 submitPublicationForm.particleNames=Nanoparticle Sample Name
 submitPublicationForm.file.category=Publication Type
