--- a/.classpath
+++ b/.classpath
@@ -6,40 +6,6 @@
 	<classpathentry kind="lib" path="lib/log4j.jar"/>
 	<classpathentry kind="lib" path="lib/servlet.jar"/>
 	<classpathentry kind="lib" path="lib/cagrid/ant-contrib-1.0b3.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-advertisement-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-caDSR-client-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-caDSR-common-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-caDSR-portal-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-caDSR-service-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-caDSR-stubs-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-caDSR-tests-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-core-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-core-resources-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-core-tests-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-CQL-cql.1.0-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-data-common-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-data-cql-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-data-service-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-data-stubs-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-data-tools-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-data-utils-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-data-validation-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-discovery-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-discovery-tests-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-Introduce-serviceTools-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-metadata-common-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-metadata-data-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-metadata-security-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-metadatautils-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-sdkQuery4-beans-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-sdkQuery4-processor-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-sdkQuery4-style-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-sdkQuery4-tests-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-sdkQuery4-tests-resources-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-ServiceSecurityProvider-client-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-ServiceSecurityProvider-common-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-ServiceSecurityProvider-service-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/caGrid-ServiceSecurityProvider-stubs-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/cagrid/castor-1.0.2.jar"/>
 	<classpathentry kind="lib" path="lib/cagrid/globus_wsrf_mds_aggregator_stubs.jar"/>
 	<classpathentry kind="lib" path="lib/cagrid/globus_wsrf_mds_aggregator.jar"/>
@@ -108,11 +74,6 @@
 	<classpathentry kind="lib" path="lib/globus/xercesImpl.jar"/>
 	<classpathentry kind="lib" path="lib/globus/xml-apis.jar"/>
 	<classpathentry kind="lib" path="lib/globus/xmlsec.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/CaNanoLabService-client.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/CaNanoLabService-common.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/CaNanoLabService-service.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/CaNanoLabService-stubs.jar"/>
-	<classpathentry kind="lib" path="lib/cagrid/CaNanoLabService-tests.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/acegi-security-1.0.4.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/asm.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/c3p0-0.9.0.jar"/>
@@ -125,12 +86,10 @@
 	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-io-1.1.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-lang-2.1.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-validator-1.3.1.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/displaytag-1.1.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/displaytag-export-poi-1.1.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/dom4j-1.4.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/dwr.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/ehcache-1.2.2.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/hibernate3.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/hibernate3.jar" sourcepath="C:/hibernate-3.2/src"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/jakarta-oro.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/jdom.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/jta.jar"/>
@@ -140,7 +99,7 @@
 	<classpathentry kind="lib" path="web/WEB-INF/lib/spring.jar"/>
 	<classpathentry kind="lib" path="conf/mysql-connector-java-5.0.7-bin.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/clm-4.1.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/csmapi-4.1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/csmapi-4.1.jar" sourcepath="H:/My Documents/My Downloads/caBIG/Csm/4.1/csmapi"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-beanutils-1.8.0.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/antlr-2.7.2.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/bsf-2.3.0.jar"/>
@@ -158,5 +117,41 @@
 	<classpathentry kind="lib" path="web/WEB-INF/lib/jstl.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/standard.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/poi-3.2-FINAL-20081019.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/CaNanoLabService-client.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/CaNanoLabService-common.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/CaNanoLabService-service.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/CaNanoLabService-stubs.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/CaNanoLabService-tests.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/displaytag-1.2.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/displaytag-export-poi-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-advertisement-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-caDSR-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-caDSR-tests-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-core-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-core-resources-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-CQL-cql.1.0-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-data-common-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-data-cql-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-data-service-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-data-stubs-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-data-tools-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-data-utils-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-data-validation-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-discovery-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-discovery-tests-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-Introduce-serviceTools-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-metadata-common-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-metadata-data-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-metadata-security-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-metadata-validator-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-metadatautils-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-sdkQuery4-beans-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-sdkQuery4-processor-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-sdkQuery4-style-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-sdkQuery4-tests-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-ServiceSecurityProvider-client-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-ServiceSecurityProvider-common-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-ServiceSecurityProvider-service-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cagrid/caGrid-ServiceSecurityProvider-stubs-1.3.jar"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
